manage decrease and increase quantity in cart